<resources>
    <string name="app_name">SavicsTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="savics">Savics</string>
    <string name="support">support@savics.com</string>
    <string name="communication">Communication</string>
    <string name="add_new_msg">Add New Patient</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_missing">Add Missing Data</string>
    <string name="zero">0</string>
    <string name="current_user">Current UserName</string>
    <string name="current_added">Current number of added users</string>
    <string name="max_added">Max number of patient allowed</string>
    <string name="save">Save</string>
    <string name="hello">Hi again, %s</string>
    <string name="savics_test">Savics Android test</string>
    <string name="message">I did good, I like it!</string>
</resources>