<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_5"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.HomeFragment">

    <TextView
        android:id="@+id/add_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new_msg"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="@dimen/font_20"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:id="@+id/tin_fullname"
    android:hint="@string/full_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/add_user"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_width="0dp">

    <EditText
        android:padding="@dimen/margin_10"
        android:textSize="@dimen/font_20"
        android:layout_margin="@dimen/margin_5"
        android:background="@drawable/edit_bg"
        android:id="@+id/patient_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:autofillHints="@string/full_name" />
</com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/font_20"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tin_fullname"
        android:id="@+id/gender_tag"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gender"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <RadioGroup
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@+id/tin_fullname"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:id="@+id/gender_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/gender_tag">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rd_male"
            android:text="@string/male"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rd_female"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            /> <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/rd_other"
        android:text="@string/other"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:id="@+id/tin_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_rg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp">

        <EditText
            android:inputType="numberDecimal"
            android:padding="@dimen/margin_10"
            android:textSize="@dimen/font_20"
            android:layout_margin="@dimen/margin_5"
            android:background="@drawable/edit_bg"
            android:id="@+id/patient_age"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_10"
            android:autofillHints="@string/full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/tin_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tin_age"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp">

        <EditText
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_10"
            android:textSize="@dimen/font_20"
            android:layout_margin="@dimen/margin_5"
            android:background="@drawable/edit_bg"
            android:id="@+id/patient_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_10" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/margin_15"
        android:textSize="@dimen/font_15"
        app:layout_constraintTop_toBottomOf="@id/tin_email"
        android:id="@+id/list_patient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/colorAccent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/add" />


</androidx.constraintlayout.widget.ConstraintLayout>